# plant_recognition_ds

./: .gitignore  README.md  ROADMAP.md  devbox.json  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
models/: xgboost_model.json
notebooks/: ARIF_1.0-data-explore-preprocess-viz.ipynb  ARIF_2.0-part1_ml_feature_extraction_method.ipynb  ARIF_2.1-part2_ml_feature_extraction_method.ipynb  ARIF_2.2-part3_ml_xbgclassifier.ipynb  ARIF_2.3-part4_deep_model_benchmark.ipynb  BBRI_1.1_data-exploration.ipynb  BBRI_2.0_lenet-final.ipynb  LuMe_1.0_model_creation.ipynb  LuMe_2.0_model_tl.ipynb  alex_1.0_px-n-lbl_to_csv.ipynb  alex_1.1_metadata_to_csv.ipynb  alex_2.0_augmentation_analysis.ipynb  alex_2.1_CNN_with_augmentation.ipynb  step0_analysis.ipynb
streamlit/: app.py  utils.py
streamlit/pages/: prediction_page.py
streamlit/web/: data_analysis.md  interpretability.md  intro.md  lenet.md  machine_learning.md  summary.md  team.md  transfer_learning.md
