[tool.poetry]
name = "plant-recognition"
version = "0.1.0"
description = "Plant recognition project for Datascientest"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"
ipykernel = "^6.29.4"
opencv-python = "^4.10.0.82"
tensorflow-intel = {version = "^2.16.1", platform = "win32"}
streamlit = "^1.36.0"
scikit-learn = "^1.5.0"
scikit-image = "^0.24.0"
xgboost = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
